Change headers images paths

--- a/src/main/js/components/DefaultHeader/style.scss
+++ b/src/main/js/components/DefaultHeader/style.scss
@@ -1,5 +1,5 @@
 .header-default {
-  background: url('../../../resources/static/img/Photo Art Deco/main/main.jpg') no-repeat fixed bottom;
+  background: url('../../../resources/static/img/main/main.jpg') no-repeat fixed bottom;
   background-size: cover;
   height: 40vh;
 
