--- a/src/main/js/components/MainHeader/style.scss
+++ b/src/main/js/components/MainHeader/style.scss
@@ -1,5 +1,5 @@
 .header {
-  background: url('../../../resources/static/img/Photo Art Deco/main/main.jpg') no-repeat fixed center;
+  background: url('../../../resources/static/img/main/main.jpg') no-repeat fixed center;
   background-size: cover;
   height: 100vh;
 
